; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-array.c_coro_lwan_array_new.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-array.c_coro_lwan_array_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_array = type { i32 }
%struct.coro = type { i32 }

@coro_lwan_array_free_inline = common dso_local global i32 0, align 4
@coro_lwan_array_free_heap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.lwan_array* @coro_lwan_array_new(%struct.coro* %0, i32 %1) #0 {
  %3 = alloca %struct.coro*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.lwan_array*, align 8
  store %struct.coro* %0, %struct.coro** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.coro*, %struct.coro** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @coro_lwan_array_free_inline, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @coro_lwan_array_free_heap, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  %15 = call %struct.lwan_array* @coro_malloc_full(%struct.coro* %6, i32 4, i32 %14)
  store %struct.lwan_array* %15, %struct.lwan_array** %5, align 8
  %16 = load %struct.lwan_array*, %struct.lwan_array** %5, align 8
  %17 = call i64 @LIKELY(%struct.lwan_array* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load %struct.lwan_array*, %struct.lwan_array** %5, align 8
  %21 = call i32 @lwan_array_init(%struct.lwan_array* %20)
  br label %22

22:                                               ; preds = %19, %13
  %23 = load %struct.lwan_array*, %struct.lwan_array** %5, align 8
  ret %struct.lwan_array* %23
}

declare dso_local %struct.lwan_array* @coro_malloc_full(%struct.coro*, i32, i32) #1

declare dso_local i64 @LIKELY(%struct.lwan_array*) #1

declare dso_local i32 @lwan_array_init(%struct.lwan_array*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
